2008-08-21  delx

	* Compiles & runs!
	* Better default preferences
	* Works with TERM=xterm
	* Sets the COLORFGBG variable
	* No annoying reverse-video border
	* tput smso ; clear ; tput rmso -- works as expected
	* back_tab supported (the key and the function)
	* new-style xterm altscreens supported
	* Fixed NSLock warnings on 10.5
	* Horizontal scroll-wheel doesn't scroll vertically anymore
	* Improved numeric keypad behaviour, now acts like xterm
	* Fixed a nasty crashing bug

2007-11-20  fabian

    * Added ESC[s and ESC[u to save and restore cursor, based on the patch from SF's bug report.
    
2007-09-08	dnedrow

	* Added private method to PreferencePanel to migrate (copy) old settings to new name.
	
2007-08-14  fabian

    * Change the behavior of the PAUSE_MODE in PTYSession so the labels can still be refreshed.
    
2007-08-11	ujwal

	* Removed some unused code.

2007-06-16	ujwal
	
	* Updated version strings so that dev build does not try to download latest version from web site.
	* Added an import statement in PTYTextView.m to fix a warning.
	* Fixed initialization bug in iTermController:-nextTerminal

2007-6-11   fabian

    * Aoid crashes when memory runs out.
    * Removed excessive debug outputs.
    * Adjustments to the full screen mode. Fixed a crash related (#1725139).

2007-5-24   fabian

    * Fixed a timer bug in PTYSession introduced in the last change.
	
2007-5-23   fabian

    * Added a PASUE_MODE in PTYSession. Now the background sessions' timer stops when there's no activity. CPU usage reducde.
    
2007-5-21	fabian

	* Changed the default font for NSTextInput display to the non-ASCII font.
	
2007-5-17	fabian

	* Fixed a key mapping problem with number keys (#1720922).
	* Fixed a key-mapping sorting bug (#1720913).
	
2007-5-16	fabian

	* Fixed a toolbar menu bug (#1716916).
	
2007-4-23   fabian

    * Fixed a bug when one launches multiple-line urls.
    * Fixed a bug with selection that scrolls out of the view.
    
2007-4-11   fabian